<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_appearance">

        <SwitchPreference
            app:key="darkMode"
            app:title="@string/switchForceDarkMode"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_utilisateur">

        <EditTextPreference
            app:key="sync"
            app:title="@string/title_username"
            app:summary="@string/default_username"/>

        <Preference
            android:key="key_open_activity"
            android:title="@string/titile_connecting"
            android:summary="@string/summary_connection"
            android:icon="@drawable/ic_launcher_foreground"
            android:onClick="openLoginActivity" />


    </PreferenceCategory>

</PreferenceScreen>