<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/title_faq"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_q_1"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_r_1"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_q_2"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_r_2"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_q_3"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_r_3"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_q_4"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_r_4"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_q_5"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_r_5"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_q_6"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_r_6"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_q_7"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_r_7"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_q_8"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_r_8"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_q_9"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_r_9"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_q_10"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_r_10"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_marginBottom="10dp" />





        </LinearLayout>
    </ScrollView>

</RelativeLayout>