<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start_d"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="match_parent"
            android:text="@string/button_discover" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_stop_d"
            android:layout_width="0dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:text="@string/button_stopDiscover" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_make_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_makeMeDiscoverable" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_listDevices"
            android:layout_marginTop="10dp"
            android:layout_gravity="center" />
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>