<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutForSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-226dp">

        <TextView
            android:id="@+id/textViewTitile"
            android:layout_width="194dp"
            android:layout_height="88dp"
            android:layout_margin="40dp"
            android:gravity="center"
            android:text="@string/title_settings"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewHelpName"
            android:layout_width="194dp"
            android:layout_height="88dp"
            android:gravity="center"
            android:text="@string/help_name"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHelpName" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitile" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:onClick="validateSettings"
            android:text="@string/button_validate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:onClick="logOut"
            android:text="@string/button_disconnect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.169"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/constraintLayoutForLogin"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/help_login"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="e-mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="151dp"
            android:layout_height="58dp"
            android:layout_marginTop="50dp"
            android:onClick="signInButton"
            android:text="@string/button_singIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:layout_width="151dp"
            android:layout_height="58dp"
            android:onClick="createAccountButton"
            android:text="@string/button_singOut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="forgotPasswordButton"
            android:text="@string/button_forgotPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>